maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:13: error: illegal start of simple pattern
  droite()
^