maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
}

def keepHandOnSideWall() 
{
  
}

def murADroite() : Boolean =
{
  var murDroite Boolean
  droite()
  murDroite = estFaceMur()
  gauche()
  return murDroite
}